feat: completed app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
+<app-header />
+
 <main class="main">
   <div class="content">
-    Wealth Wizard
+    <app-calculator />
+    <app-investment-result />
   </div>
 </main>
 
